changes in Post isse controller and fronetn update

--- a/ahus-pwa/public/index.html
+++ b/ahus-pwa/public/index.html
@@ -32,6 +32,31 @@
   .App-intro {
     font-size: large;
   }
+
+  @font-face {
+      font-family: 'ChronicleSemiBold';
+      src: url('./Font/ChronicleDeckCond-Semibold.otf');
+  }
+
+  @font-face {
+      font-family: 'ChronicleLight';
+      src: url('./Font/ChronicleDispCond-Light.otf');
+  }
+
+  @font-face {
+      font-family: 'ChronicleRoman';
+      src: url('./Font/ChronicleTextG1-Roman.otf');
+  }
+
+  @font-face {
+      font-family: 'SceneLight';
+      src: url('./Font/SceneAH-Light.otf');
+  }
+
+  @font-face {
+      font-family: 'SceneMedium';
+      src: url('../Font/SceneAH-Medium.otf');
+  }
 </style>
 </head>
 <body>
