--- a/ahus-pwa/public/index.html
+++ b/ahus-pwa/public/index.html
@@ -4,7 +4,9 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+      <link rel="shortcut icon" href="%PUBLIC_URL%/icon.svg">
+      <?xml version="1.0" encoding="utf-8"?>
+      <browserconfig><msapplication><square70x70logo src="/ms-icon-70x70.png"/><square150x150logo src="/ms-icon-150x150.png"/><square310x310logo src="/ms-icon-310x310.png"/></msapplication></browserconfig>
       <!-- Add manifest -->
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
       <!-- Tell the browser it's a PWA -->
@@ -66,10 +68,10 @@
     <div id="root">
         <div class="App">
             <div class="App-header">
-                <h2>Home</h2>
+                <h2>Akademiska Hus</h2>
             </div>
             <p class="App-intro">
-                Loading site...
+                Vi laddar sidan just nu...
             </p>
         </div>
     <script>
