--- a/ahus-pwa/public/index.html
+++ b/ahus-pwa/public/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="shortcut icon" href="%PUBLIC_URL%/icon.svg">
+      <link rel="shortcut icon" href="%PUBLIC_URL%/Logga192x192.png">
       <?xml version="1.0" encoding="utf-8"?>
       <browserconfig><msapplication><square70x70logo src="/ms-icon-70x70.png"/><square150x150logo src="/ms-icon-150x150.png"/><square310x310logo src="/ms-icon-310x310.png"/></msapplication></browserconfig>
       <!-- Add manifest -->
