--- a/ahus-pwa/public/index.html
+++ b/ahus-pwa/public/index.html
@@ -4,9 +4,8 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="Description" content="Det ska vara enkelt att kunna felanmäla en händelse i din fastighet. Att anmäla ett fel är snabbt och enkelt. Navigera dig igenom menyn till vänster för flera val. Om du återkommer hit regelbundet så rekommenderar vi att du skapar ett konto för att få ett helhetsgrepp på dels dina felanmälningar men också nyheter.">
       <link rel="shortcut icon" href="%PUBLIC_URL%/Logga192x192.png">
-      <?xml version="1.0" encoding="utf-8"?>
-      <browserconfig><msapplication><square70x70logo src="/ms-icon-70x70.png"/><square150x150logo src="/ms-icon-150x150.png"/><square310x310logo src="/ms-icon-310x310.png"/></msapplication></browserconfig>
       <!-- Add manifest -->
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
       <!-- Tell the browser it's a PWA -->
@@ -60,6 +59,13 @@
       src: url('../Font/SceneAH-Medium.otf');
   }
 </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48455722-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-48455722-2');
+    </script>
 </head>
 <body>
     <noscript>
